--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation("com.approvaltests:approvaltests:18.5.0")
+
 }
 
 tasks.named('test') {
